--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -7,7 +7,7 @@ python_classes = Test*
 python_functions = test_*
 
 # Test paths
-testpaths = tests
+testpaths = tests ../scripts/project_cli/tests
 
 # Add markers
 markers =
