--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -14,6 +14,7 @@ markers =
     unit: Unit tests
     integration: Integration tests
     slow: Slow running tests
+    performance: Performance tests
 
 # Coverage options
 addopts =
